update on rich text

--- a/index.html
+++ b/index.html
@@ -2,14 +2,22 @@
 <html lang="en">
 
   <head>
-    <meta charset="UTF-8" /> 
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <script src="https://kit.fontawesome.com/1dd68e2cb0.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;0,1000;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900;1,1000&display=swap" rel="stylesheet">
+    <meta charset="UTF-8" /> 
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>La Petite Tribu ® - Motion, Digital, Branding</title>
+    <meta name="title" content="La Petite Tribu ® - Motion, Digital, Branding">
+    <meta name="description" content="Studio digital basé à Dakar, Sénégal. Créateur d'expériences digitales interactives pour les marques ambitieuses, innovantes et surtout audacieuses !">
+    <meta name="keywords" content="site internet, design, animation 2d, animation 3d, wordpress, html, css, dakar, senegal, nuxt, vue, art, landing page, ecommerce, site vitrine">
+    <meta name="robots" content="index, follow">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta name="language" content="French">
+    <meta name="author" content="Abdoulaye GNING / La Petite Tribu">
   </head>
 
     <!-- Google tag (gtag.js) -->
