--- a/index.html
+++ b/index.html
@@ -20,6 +20,15 @@
     <meta name="language" content="French">
     <meta name="author" content="Abdoulaye GNING / La Petite Tribu">
   </head>
+  
+    <!-- Microsoft Clarity -->
+    <script type="text/javascript">
+      (function(c,l,a,r,i,t,y){
+          c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+          t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
+          y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+      })(window, document, "clarity", "script", "o7a7ivowth");
+   </script>
 
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-BZ1DL8HQFP"></script>
